# local-voice-studio

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  mappers.py  routes_files.py  routes_generation.py  routes_profiles.py  routes_runtime.py
backend/app/core/: config.py  container.py  errors.py
backend/app/db/: base.py  migrations.py  session.py
backend/app/models/: base.py  generation.py  profile.py  reference_clip.py
backend/app/repositories/: clip_repository.py  generation_repository.py  profile_repository.py
backend/app/schemas/: common.py  generation.py  profile.py  runtime.py  shared.py
backend/app/services/: audio_service.py  generation_service.py  profile_service.py  runtime_service.py  transcription_service.py
backend/app/services/tts/: base.py  factory.py  qwen3_engine.py  xtts_engine.py
backend/app/utils/: files.py  json.py  torch_compat.py  xtts_compat.py
backend/data/: app.db
backend/tests/: conftest.py  test_api.py  test_profile_service.py  test_repositories.py
data/: app.db
docs/: architecture.md  runtime.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/app/: AppShell.tsx  DashboardPage.tsx  router.tsx  styles.css
frontend/src/components/: AudioPlayer.tsx  SectionCard.tsx  StatusBadge.tsx
scripts/: dev-backend.ps1  dev-frontend.ps1  prefetch-model.py  setup.ps1
(+13 files in other folders)
