[project]
name = "local-voice-studio-backend"
version = "0.1.0"
description = "FastAPI backend for local-first voice cloning and XTTS synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]
xtts = [
  "TTS>=0.22.0",
  "transformers>=4.43,<4.47",
  "numpy==1.22.0; python_version <= '3.10'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
